# Periphery

./: .dockerignore  .env.example  .gitignore  ANALYSIS_ICIJ_2026-03-20.md  CHANGELOG_2026-03-18.md  CHANGELOG_DATASETS.md  CHANGELOG_LLM_VERIFICATION.md  CHANGELOG_PAGINATION.md  CODE_REVIEW.md  Dockerfile  LICENSE-THIRD-PARTY  Makefile  README.md  docker-compose.yml  docker-entrypoint-api-only.sh  docker-entrypoint.sh  pyproject.toml  run_crystallizer.py  sqlforthis.txt  systemservice.txt
data/: geospatial_seeds.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
operations/: security-hardening-spec.md
periphery/: __init__.py  config.py  db.py  main.py  models.py
periphery/auth/: __init__.py  api_keys.py  api_keys_router.py  classification.py  clerk_verifier.py  middleware.py  models.py  persistence.py  personal.py  rate_limiter.py  router.py  utils.py
periphery/commands/: fec_ingest.py  (+5 more)
periphery_mcp/: README.md  __init__.py  __main__.py  auth.py  client.py  server.py  test_tools.py
scripts/: data-lifecycle.sh  ingest_datasets.py  migrate_to_domain_dbs.py  run.sh  setup.sh  smoke_test.sh  storagebox-sync.sh
tests/: conftest.py  test_api_keys.py  test_auth.py  test_classification.py  test_critic.py  test_crystallizer.py  test_dataset_sources.py  test_db_pool.py  test_enrichment.py  test_fec_contributions.py  test_gdelt_doc.py  test_geo_router.py  test_ingest.py  test_irs_exempt_orgs.py  test_llm_verification.py  test_nc_campaign_finance.py  test_nc_parcels.py  test_nc_register_of_deeds.py  test_nc_sos_business.py  test_nc_voter.py  test_query.py  test_query_interface.py  test_rate_limiting.py  test_rss_ingest.py  test_sources.py
(+163 files in other folders)
