[project]
name = "periphery"
version = "0.1.0"
description = "Data infrastructure where schema is emergent observation, not predefined imposition"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "hdbscan>=0.8.33",
    "networkx>=3.3",
    "torch>=2.2",
    "anthropic>=0.25",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["periphery*"]
