[project]
name = "periphery"
version = "0.1.0"
description = "Data infrastructure where schema is emergent observation, not predefined imposition"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "hdbscan>=0.8.33",
    "networkx>=3.3",
    "torch>=2.2",
    "anthropic>=0.25",
    "exa-py>=1.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "feedparser>=6.0",
    "trafilatura>=1.6",
    "beautifulsoup4>=4.12",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "spacy>=3.7",
    "python-dateutil>=2.9",
    "geopy>=2.4",
    "rapidfuzz>=3.6",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["periphery*"]
